--- a/templates/sign-up.html
+++ b/templates/sign-up.html
@@ -10,7 +10,7 @@
         </p>
         <p>
             <label for="last">Last Name</label>
-            <input id="last" name="lastname" type="number">
+            <input id="last" name="lastname" type="text">
         </p>
         <input type="submit" value="Send Data to Server">
     </form>
